; ModuleID = '/home/carl/AnghaBench/radare2/libr/util/extr_buf_ref.c_buf_ref_fini.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/util/extr_buf_ref.c_buf_ref_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.buf_ref_priv = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*)* @buf_ref_fini to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @buf_ref_fini(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca %struct.buf_ref_priv*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %5 = call %struct.buf_ref_priv* @get_priv_ref(%struct.TYPE_4__* %4)
  store %struct.buf_ref_priv* %5, %struct.buf_ref_priv** %3, align 8
  %6 = load %struct.buf_ref_priv*, %struct.buf_ref_priv** %3, align 8
  %7 = getelementptr inbounds %struct.buf_ref_priv, %struct.buf_ref_priv* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @r_buf_free(i32 %8)
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @R_FREE(i32 %12)
  ret i32 1
}

declare dso_local %struct.buf_ref_priv* @get_priv_ref(%struct.TYPE_4__*) #1

declare dso_local i32 @r_buf_free(i32) #1

declare dso_local i32 @R_FREE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
